# mago

./: .gitignore  CMakeLists.txt  README.md
include/: printer.hpp
include/generator/: btgenerator.hpp  generator.hpp
include/maze/: cell.hpp  maze.hpp
magos/: CMakeLists.txt
magos/include/: printer.hpp
magos/include/generator/: btgenerator.hpp  generator.hpp
magos/include/maze/: cell.hpp  maze.hpp
magos/src/: magos.cpp  printer.cpp
magos/src/generator/: btgenerator.cpp
magos/src/maze/: cell.cpp  maze.cpp
samples/: 5x5-BT-bw-maze.yaml
src/: mago.cpp  printer.cpp
src/generator/: btgenerator.cpp
src/maze/: cell.cpp  maze.cpp
